Closed Bug 912305 Opened 11 years ago Closed 11 years ago

Description of RadialGradientPattern parameters in 2D.h is wrong

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: birtles, Assigned: birtles)

Details

Attachments

(1 file)

The documentation for the constructor of RadialGradientPattern appears to have been copy-pasted from LinearGradientPattern and hence the parameters don't match up.

http://mxr.mozilla.org/mozilla-central/source/gfx/2d/2D.h#249
Does this make sense?
Attachment #799200 - Flags: review?(bas)
Comment on attachment 799200 [details] [diff] [review]
fixRadialGradientDocs

Review of attachment 799200 [details] [diff] [review]:
-----------------------------------------------------------------

Sounds good!
Attachment #799200 - Flags: review?(bas) → review+
https://hg.mozilla.org/mozilla-central/rev/7035eecefd25
Assignee: nobody → birtles
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: