Bug 912305 - Fix documentation of RadialGradientPattern constructor; r=bas, DONTBUILD (comment-only)